[package]
name = "new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env", "unicode", "wrap_help", "color"] }
dotenvy = { version = "0.15.6", features = ["clap", "cli"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
walkdir = "2.3.2"
